update list sizes

--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,7 @@
         <div style="padding-left: 4ch;">Response</div>
         <div style="padding-left: 6ch;">
             {
-                <div style="padding-left: 2ch;">results: string[3]</div>
+                <div style="padding-left: 2ch;">results: string[]</div>
                 <div style="padding-left: 2ch;">date: string</div>
             }
         </div>
@@ -29,12 +29,12 @@
         <div style="padding-left: 6ch;">
             {
             <div style="padding-left: 2ch;">topic: string</div>
-            <div style="padding-left: 2ch;">urls: string[:3]</div>
+            <div style="padding-left: 2ch;">urls: string[:5]</div>
             }
         </div>
         <div style="padding-left: 4ch;">Response</div>
         <div style="padding-left: 6ch;">{
-                <div style="padding-left: 2ch;">summary: string[:3]</div>
+                <div style="padding-left: 2ch;">summary: string[]</div>
             }
         </div>
     </code>
